[gd_scene load_steps=8 format=3 uid="uid://pxu0aleit31x"]

[ext_resource type="Script" path="res://Scrips/Player/player.gd" id="1_87tco"]
[ext_resource type="Texture2D" uid="uid://cvl4sqpoxbvac" path="res://Textures/Skins/Default.png" id="2_5pvwf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kikao"]
size = Vector2(18.5, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8612"]
size = Vector2(24, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j65c6"]
size = Vector2(18.5, 8)

[sub_resource type="Animation" id="Animation_evlda"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4c60t"]
_data = {
"Idle": SubResource("Animation_evlda")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_87tco")

[node name="Skin" type="Sprite2D" parent="."]
position = Vector2(0, -25)
scale = Vector2(0.24, 0.24)
texture = ExtResource("2_5pvwf")
hframes = 6
frame = 1

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0, -25)
zoom = Vector2(1.8, 1.8)
position_smoothing_speed = 30.0

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0.175, 0)
shape = SubResource("RectangleShape2D_kikao")

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast_UP" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(0, -32)

[node name="RayCast_DOWN" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(0, 32)

[node name="RayCast_RIGHT" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(40, 0)

[node name="RayCast_LEFT" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(-40, 0)

[node name="FullBody_Area" type="Area2D" parent="."]
position = Vector2(0, -25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullBody_Area"]
shape = SubResource("RectangleShape2D_s8612")

[node name="Feed_Area" type="Area2D" parent="."]
position = Vector2(1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Feed_Area"]
position = Vector2(-0.825, 0)
shape = SubResource("RectangleShape2D_j65c6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4c60t")
}
autoplay = "Idle"

[connection signal="area_entered" from="FullBody_Area" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="FullBody_Area" to="." method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Feed_Area" to="." method="_on_feed_area_area_entered"]
